--- a/src/components/logros-card/logros-card.html
+++ b/src/components/logros-card/logros-card.html
@@ -1,5 +1,7 @@
 <div class="logros-card flex-column">
-  <div class="imagen-logro"></div>
+  <div class="imagen-logro">
+    <img [src]="imagenLogroUrl" alt="" />
+  </div>
   <div class="titulo-logro">{{ tituloLogro }}</div>
   <div class="descripcion-logro">{{ descripcionLogro }}</div>
   <div class="estado-logro">{{ estadoLogro }}</div>
