--- a/src/components/logros/logros.html
+++ b/src/components/logros/logros.html
@@ -12,41 +12,49 @@
       tituloLogro="En racha"
       descripcionLogro="Entrena durante 7 días seguidos"
       estadoLogro="Completado"
+      imagenLogroUrl="/achievements-icons/fire.png"
     ></logros-card>
     <logros-card
       tituloLogro="Principiante"
       descripcionLogro="Completa tu primer entrenamiento"
       estadoLogro="Completado"
+      imagenLogroUrl="/achievements-icons/gym.png"
     ></logros-card>
     <logros-card
       tituloLogro="Intermedio"
       descripcionLogro="Alcanza el nivel intermedio"
       estadoLogro="Completado"
+      imagenLogroUrl="/achievements-icons/in-between.png"
     ></logros-card>
     <logros-card
       tituloLogro="Avanzado"
       descripcionLogro="Alcanza el nivel avanzado"
       estadoLogro="En progreso"
+      imagenLogroUrl="/achievements-icons/hard-work.png"
     ></logros-card>
     <logros-card
       tituloLogro="Imparable"
       descripcionLogro="Entrena durante 100 días seguidos"
       estadoLogro="En progreso"
+      imagenLogroUrl="/achievements-icons/muscle.png"
     ></logros-card>
     <logros-card
       tituloLogro="Estirar"
       descripcionLogro="Realiza una sesión de estiramientos"
       estadoLogro="No completado"
+      imagenLogroUrl="/achievements-icons/yoga.png"
     ></logros-card>
     <logros-card
       tituloLogro="Inmortal"
       descripcionLogro="Entrena durante 200 días seguidos"
       estadoLogro="No completado"
+      imagenLogroUrl="/achievements-icons/prometheus.png"
     ></logros-card>
     <logros-card
       tituloLogro="Imposible"
       descripcionLogro="Entrena durante 40000 días seguidos"
       estadoLogro="Imposible"
+      imagenLogroUrl="/achievements-icons/infinity.png"
     ></logros-card>
   </div>
 </div>
