avance sección de estadísticas

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,7 @@
   --nocompletado: #f50000;
   --enprogreso: #f57b00;
   --imposible: #6e00ff;
+  --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 img {
