--- a/src/components/estadisticas/estadisticas.html
+++ b/src/components/estadisticas/estadisticas.html
@@ -1,1 +1,79 @@
-<p>estadisticas works!</p>
+<div class="flex-column wrapper">
+  <cabecera titulo="Estadísticas" descripcion="Mide tu progreso de manera precisa"></cabecera>
+  <div class="filtrar" style="margin-bottom: 1rem; display: flex; gap: 0.5rem; align-items: center">
+    <h2>Periodo de tiempo</h2>
+    <select style="border: none; border-radius: var(--border-radius); padding: 0.5rem">
+      <option value="Semanal">Semanal</option>
+      <option value="Mensual">Mensual</option>
+      <option value="Anual">Anual</option>
+    </select>
+  </div>
+  <div class="estadisticas-grid">
+    <div class="pie-chart">
+      <h2>Estadísticas dos</h2>
+      <div class="centrar square-chart">
+        <canvas baseChart [data]="pieChartData" [options]="pieChartOptions" type="pie"></canvas>
+      </div>
+    </div>
+    <div class="line-chart">
+      <h2>Estadística tres</h2>
+      <div class="centrar rectangular-chart">
+        <canvas baseChart [data]="lineChartData" [options]="lineChartOptions" type="line"></canvas>
+      </div>
+    </div>
+    <div
+      class="sesiones"
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 0.5rem;
+      "
+    >
+      <div class="numero-sesiones flex-column">7</div>
+      Sesiones
+    </div>
+    <div class="radar-chart">
+      <h2>Estadística cuatro</h2>
+      <div class="centrar square-chart">
+        <canvas
+          baseChart
+          [data]="radarChartData"
+          [options]="radarChartOptions"
+          type="radar"
+        ></canvas>
+      </div>
+    </div>
+    <div
+      class="minutos"
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 0.5rem;
+      "
+    >
+      <div class="numero-minutos">234</div>
+      Minutos
+    </div>
+    <div class="bar-chart">
+      <h2>Estadística uno</h2>
+      <div class="centrar rectangular-chart">
+        <canvas baseChart [data]="barChartData" [options]="barChartOptions" type="bar"></canvas>
+      </div>
+    </div>
+    <div class="doughnut-chart">
+      <h2>Estadística cinco</h2>
+      <div class="centrar square-chart">
+        <canvas
+          baseChart
+          [data]="doughnutChartData"
+          [options]="doughnutChartOptions"
+          type="doughnut"
+        ></canvas>
+      </div>
+    </div>
+  </div>
+</div>
