seccion de favoritos avance

--- a/src/components/estadisticas/estadisticas.html
+++ b/src/components/estadisticas/estadisticas.html
@@ -59,7 +59,7 @@
       Minutos
     </div>
     <div class="bar-chart">
-      <h2>Estadística uno</h2>
+      <h2>Ejercicios más realizados</h2>
       <div class="centrar rectangular-chart">
         <canvas baseChart [data]="barChartData" [options]="barChartOptions" type="bar"></canvas>
       </div>
