--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,6 +1,9 @@
 <div class="navbar-wrapper">
   <div style="display: none" class="title">
     <h1>FITAPP</h1>
+    <div class="hamburger-button" (click)="mostrarMenu()">
+      <img src="icons8-hamburger-menu-50.png" alt="" />
+    </div>
   </div>
   <div class="icons-wrapper flex-column">
     <div class="icons flex-column">
