avance sección de perfil

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@
   --enprogreso: #f57b00;
   --imposible: #6e00ff;
   --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  --medium-level-color: #ffdc30;
 }
 
 img {
