--- a/src/components/perfil/perfil.html
+++ b/src/components/perfil/perfil.html
@@ -8,7 +8,7 @@
     <div class="nombre-usuario">
       <h2>Usuario</h2>
     </div>
-    <div class="nivel-wrapper" style="display: flex; gap: 1rem">
+    <div class="nivel-wrapper" style="display: flex; gap: 1rem; flex-wrap: wrap">
       <div class="nivel">Intermedio</div>
       <button class="default-button">Editar perfil</button>
     </div>
@@ -48,7 +48,7 @@
           "
         >
           <h3>Logros</h3>
-          <span class="logros completados">3/30</span>
+          <span class="logros-completados">3/30</span>
         </div>
         <div class="logros-wrapper flex-column" style="gap: 1rem">
           <div class="logros-component" style="display: flex; gap: 1rem; align-items: center">
@@ -60,11 +60,23 @@
             </div>
           </div>
           <div class="logros-component" style="display: flex; gap: 1rem; align-items: center">
-            <img src="/achievements-icons/gym.png" alt="" style="width: 30px; height: 30px" />
+            <img src="/achievements-icons/fire.png" alt="" style="width: 30px; height: 30px" />
             <div class="logro-info" style="display: flex; flex-direction: column">
-              <span><strong>Primera meta</strong></span>
-              <span class="descripcion">Completa tu primer entrenamiento</span>
-              <span class="fecha-desbloqueo">31/01/22</span>
+              <span><strong>En racha</strong></span>
+              <span class="descripcion">Entrena durante siete días seguidos</span>
+              <span class="fecha-desbloqueo">17/04/23</span>
+            </div>
+          </div>
+          <div class="logros-component" style="display: flex; gap: 1rem; align-items: center">
+            <img
+              src="/achievements-icons/in-between.png"
+              alt=""
+              style="width: 30px; height: 30px"
+            />
+            <div class="logro-info" style="display: flex; flex-direction: column">
+              <span><strong>Intermedio</strong></span>
+              <span class="descripcion">Alcanza el nivel intermedio</span>
+              <span class="fecha-desbloqueo">05/05/23</span>
             </div>
           </div>
         </div>
