--- a/src/components/perfil/perfil.css
+++ b/src/components/perfil/perfil.css
@@ -31,9 +31,7 @@ h3 {
 }
 
 .user-info {
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: calc(175px / 2);
+  margin: calc(175px / 2) 2rem 2rem 2rem;
   gap: 0.75rem;
 }
 
@@ -57,7 +55,7 @@ h3 {
 
 .profile-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(min(350px, 100%), 1fr));
   gap: 1.5rem;
 }
 
@@ -98,4 +96,24 @@ h3 {
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
   padding: 0.5rem;
+}
+
+.logros-completados {
+  padding: 0.5rem;
+  border-radius: var(--border-radius);
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  font-weight: var(--semi-bold);
+}
+
+.descripcion,
+.fecha-desbloqueo {
+  color: var(--alternative-gray-font-color);
+  font-size: 0.85rem;
+}
+
+@media (width <= 768px) {
+  #profile-wrapper {
+    margin-left: 0;
+  }
 }
