--- a/src/components/perfil/perfil.html
+++ b/src/components/perfil/perfil.html
@@ -1,7 +1,7 @@
 <div class="flex-column" id="profile-wrapper">
   <div class="foto-portada">
     <div class="foto-perfil">
-      <img src="/stock-profile/drose.jpg" alt="" />
+      <img src="/stock-profile/drose.jpg" alt="user-pfp" />
     </div>
   </div>
   <div class="flex-column user-info">
