avance sección de metas

--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -10,7 +10,7 @@
       <div>
         <img src="images/navbar-icons/icons8-home-50.png" alt="" />
       </div>
-      <div>
+      <div (click)="toStats()">
         <img src="images/navbar-icons/icons8-statistics-60.png" alt="" />
       </div>
       <div>
