avance en la sección de rutina activa

--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -13,29 +13,29 @@
       <div (click)="toStats()">
         <img src="images/navbar-icons/icons8-statistics-60.png" alt="" />
       </div>
-      <div>
+      <div (click)="toMyRoutines()">
         <img src="images/navbar-icons/icons8-dumbell-64(1).png" alt="" />
       </div>
-      <div>
+      <div (click)="toGoals()">
         <img src="images/navbar-icons/icons8-goal-50.png" alt="" />
       </div>
-      <div>
+      <div (click)="toNotes()">
         <img src="images/navbar-icons/icons8-notes-50.png" alt="" />
       </div>
-      <div>
+      <div (click)="toProfile()">
         <img src="images/navbar-icons/icons8-profile-52.png" alt="" />
       </div>
-      <div>
+      <div (click)="toAchievements()">
         <img src="images/navbar-icons/icons8-trophy-52.png" alt="" />
       </div>
-      <div>
+      <div (click)="toFavorites()">
         <img src="images/navbar-icons/icons8-heart-52.png" alt="" />
       </div>
       <div>
         <img src="images/navbar-icons/icons8-history-52.png" alt="" />
       </div>
     </div>
-    <div class="logout-button">
+    <div class="logout-button" (click)="logout()">
       <img src="images/navbar-icons/icons8-log-out-64.png" alt="" />
     </div>
   </div>
