--- a/src/components/home-page/home-page.html
+++ b/src/components/home-page/home-page.html
@@ -78,6 +78,79 @@
         <button class="gray-outline-button">Mantener condición física</button>
         <button class="gray-outline-button">Quemar calorías</button>
       </div>
+      <div class="rutinas-metas-populares flex-column">
+        <div class="rutina">
+          <div class="img-wrapper">
+            <img src="/routine-images/metas-populares/musculoso.jpg" alt="" />
+          </div>
+          <div class="right">
+            <div class="dificultad-ejercicios flex-column">
+              <span>Ganar músculo</span>
+              <span>15 ejercicios</span>
+            </div>
+            <div class="iconos">
+              <img src="/edit-delete-icons/icons8-edit-48.png" alt="" />
+              <img src="/heart.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="rutina">
+          <div class="img-wrapper">
+            <img src="/routine-images/metas-populares/persona corriendo.jpg" alt="" />
+          </div>
+          <div class="right">
+            <div class="dificultad-ejercicios flex-column">
+              <span>Quemar calorías</span>
+              <span>20 ejercicios</span>
+            </div>
+            <div class="iconos">
+              <img src="/edit-delete-icons/icons8-edit-48.png" alt="" />
+              <img src="/heart.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="rutina">
+          <div class="img-wrapper">
+            <img src="/routine-images/metas-populares/flexiones.jpg" alt="" />
+          </div>
+          <div class="right">
+            <div class="dificultad-ejercicios flex-column">
+              <span>Matener condición</span>
+              <span>20 ejercicios</span>
+            </div>
+            <div class="iconos">
+              <img src="/edit-delete-icons/icons8-edit-48.png" alt="" />
+              <img src="/heart.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="programas-ejercicio flex-column">
+        <h2>Prueba nuestros programas</h2>
+        <div class="programas-ejercicios-slider">
+          <div class="programa-flexibilidad">
+            <h3>Programa de flexibilidad</h3>
+            <button>Probar</button>
+          </div>
+          <div class="programa-fuerza">
+            <h3>Programa de fuerza</h3>
+            <button>Probar</button>
+          </div>
+          <div class="programa-fuerza-sin-equipo">
+            <h3>Programa de fuerza sin equipamiento</h3>
+            <button>Probar</button>
+          </div>
+          <div class="programa-cardio">
+            <h3>Programa de cardio</h3>
+            <button>Probar</button>
+          </div>
+        </div>
+      </div>
+      <div class="crear-rutina flex-column">
+        <h2>¿No encuentras lo que buscas?</h2>
+        <span>Crea tu propia rutina</span>
+        <div><button>Crear</button></div>
+      </div>
     </div>
   </section>
 </div>
