--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,10 +1,13 @@
 <div class="navbar-wrapper">
   <div style="display: none" class="title">
     <h1>FITAPP</h1>
-    <div class="hamburger-button" (click)="mostrarMenu()">
+    <div class="hamburger-button" (click)="toggleMenu()">
       <img src="icons8-hamburger-menu-50.png" alt="" />
     </div>
   </div>
+  @if (isMenuVisibile) {
+  <menu-movil></menu-movil>
+  }
   <div class="icons-wrapper flex-column">
     <div class="icons flex-column">
       <div>
