--- a/src/components/menu-movil/menu-movil.css
+++ b/src/components/menu-movil/menu-movil.css
@@ -1,21 +1,15 @@
-.menu-movil {
-  height: 100dvh;
-  background-color: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(5px);
-  position: absolute;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  width: 100%;
+h2,
+.close-button {
+  font-weight: var(--black-weight);
 }
 
 .menu-movil-interno {
-  position: absolute;
-  background-color: var(--secondary-color);
-  height: 100%;
-  padding: 1.5rem;
+  margin-top: 0.5rem;
+  background-color: var(--primary-color);
   font-weight: var(--semi-bold);
   gap: 2rem;
+  color: var(--secondary-color);
+  display: none;
 }
 
 .close-button {
@@ -31,10 +25,43 @@
   gap: 1rem;
 }
 
-.secciones-principales {
+.secciones-principales > *,
+.cerrar-sesion {
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  display: flex;
   gap: 0.5rem;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.secciones-principales div > img {
+  width: 20px;
+  height: 20px;
+}
+
+.cerrar-sesion > img {
+  width: 25px;
+  height: 25px;
 }
 
 .close-button:hover {
   background-color: rgba(0, 0, 0, 0.25);
+}
+
+.secciones-principales > *:hover,
+.cerrar-sesion:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+@media (width <= 768px) {
+  .secciones-principales > * {
+    gap: 0.75rem;
+    padding: 0.5rem 1rem;
+    padding-left: 0;
+  }
+
+  .menu-movil-interno {
+    display: block;
+  }
 }
