--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -5,40 +5,42 @@
       <img src="icons8-hamburger-menu-50.png" alt="" />
     </div>
   </div>
-  @if (isMenuVisibile) {
-  <menu-movil></menu-movil>
-  }
+  <menu-movil
+    class="mobile-menu"
+    [class.isVisible]="isMenuVisible"
+    (linkClicked)="closeMenu()"
+  ></menu-movil>
   <div class="icons-wrapper flex-column">
     <div class="icons flex-column">
-      <div>
+      <div (click)="navigation.toHome()">
         <img src="images/navbar-icons/icons8-home-50.png" alt="" />
       </div>
-      <div (click)="toStats()">
+      <div (click)="navigation.toStats()">
         <img src="images/navbar-icons/icons8-statistics-60.png" alt="" />
       </div>
-      <div (click)="toMyRoutines()">
+      <div (click)="navigation.toMyRoutines()">
         <img src="images/navbar-icons/icons8-dumbell-64(1).png" alt="" />
       </div>
-      <div (click)="toGoals()">
+      <div (click)="navigation.toGoals()">
         <img src="images/navbar-icons/icons8-goal-50.png" alt="" />
       </div>
-      <div (click)="toNotes()">
+      <div (click)="navigation.toNotes()">
         <img src="images/navbar-icons/icons8-notes-50.png" alt="" />
       </div>
-      <div (click)="toProfile()">
+      <div (click)="navigation.toProfile()">
         <img src="images/navbar-icons/icons8-profile-52.png" alt="" />
       </div>
-      <div (click)="toAchievements()">
+      <div (click)="navigation.toAchievements()">
         <img src="images/navbar-icons/icons8-trophy-52.png" alt="" />
       </div>
-      <div (click)="toFavorites()">
+      <div (click)="navigation.toFavorites()">
         <img src="images/navbar-icons/icons8-heart-52.png" alt="" />
       </div>
-      <div>
+      <div (click)="navigation.toHistory()">
         <img src="images/navbar-icons/icons8-history-52.png" alt="" />
       </div>
     </div>
-    <div class="logout-button" (click)="logout()">
+    <div class="logout-button" (click)="navigation.logout()">
       <img src="images/navbar-icons/icons8-log-out-64.png" alt="" />
     </div>
   </div>
