--- a/src/components/favoritos/favoritos.css
+++ b/src/components/favoritos/favoritos.css
@@ -12,7 +12,7 @@
 
 .grid-favoritos {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min(100%, 300px), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
   gap: 1rem;
 }
 
