avance modales y transiciones

--- a/src/components/home-page/home-page.html
+++ b/src/components/home-page/home-page.html
@@ -3,7 +3,7 @@
   (close)="closeMenu()"
   [class.isVisible]="isExerciseComponentVisible"
 ></agregar-ejercicios>
-<div class="flex-column wrapper home-page-root">
+<div class="flex-column wrapper">
   <section class="bienvenida">
     <div class="mensaje-bienvenida">Bienvenido, <span>Usuario</span></div>
     <div class="foto-perfil">
