--- a/src/components/mis-rutinas/mis-rutinas.html
+++ b/src/components/mis-rutinas/mis-rutinas.html
@@ -1,5 +1,14 @@
+<agregar-ejercicios
+  class="show-component"
+  [class.isVisible]="isExerciseComponentVisible"
+  (close)="closeExerciseComponent()"
+></agregar-ejercicios>
 <div class="flex-column wrapper">
   <cabecera titulo="Mis rutinas" descripcion="Las mejores rutinas creadas por ti"></cabecera>
+  <div class="crear-rutina">
+    <h3>Crea tu propia rutina</h3>
+    <div class="default-button add-button" (click)="showExerciseComponent()">+</div>
+  </div>
   <div class="grid">
     <workout-card
       title="Rutina personalizada 1"
