--- a/src/components/agregar-ejercicios/agregar-ejercicios.css
+++ b/src/components/agregar-ejercicios/agregar-ejercicios.css
@@ -10,6 +10,24 @@
   left: 0;
 }
 
+:host {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+:host {
+  transition: transform 400ms ease-in;
+  transform: translateY(100%);
+}
+
+:host(.isVisible) {
+  transform: translateY(0);
+}
+
 .agregar-ejercicio-componente {
   position: fixed;
   background-color: var(--secondary-color);
