--- a/src/components/metas/metas.css
+++ b/src/components/metas/metas.css
@@ -20,3 +20,22 @@
   border: none;
   padding: 0.5rem;
 }
+
+.agregar-meta {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  margin-bottom: 1rem;
+}
+
+.agregar-meta > h3 {
+  font-weight: var(--semi-bold);
+}
+
+.add-button {
+  width: 40px;
+  height: 40px;
+  display: grid;
+  place-items: center;
+  border-radius: 100%;
+}
