--- a/src/components/mis-rutinas/mis-rutinas.css
+++ b/src/components/mis-rutinas/mis-rutinas.css
@@ -15,6 +15,26 @@
   transform: scale(1.025);
 }
 
+.crear-rutina {
+  display: flex;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+  align-items: center;
+}
+
+.add-button {
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h3 {
+  font-weight: var(--semi-bold);
+}
+
 @media (width <= 768px) {
   .root {
     flex-direction: column;
