--- a/src/components/agregar-ejercicios/agregar-ejercicios.html
+++ b/src/components/agregar-ejercicios/agregar-ejercicios.html
@@ -1,5 +1,5 @@
-<div class="agregar-ejercicio-root">
-  <div class="flex-column agregar-ejercicio-componente">
+<div class="agregar-ejercicio-root modal-wrapper">
+  <div class="flex-column modal-component" id="agregar-ejercicio-componente">
     <div class="header">
       <h3>Agregar ejercicios</h3>
       <div class="close" (click)="onClose()">X</div>
