--- a/src/components/modal-metas/modal-metas.html
+++ b/src/components/modal-metas/modal-metas.html
@@ -1,5 +1,5 @@
-<div class="modal-metas-wrapper">
-  <div class="flex-column modal-metas-component">
+<div class="modal-wrapper">
+  <div class="flex-column modal-component">
     <div class="modal-metas-header flex-between blue-font-color">
       <h3>Creación/edición de metas</h3>
       <div class="close-button" (click)="closeMenu()">X</div>
