--- a/src/components/modal-notas/modal-notas.html
+++ b/src/components/modal-notas/modal-notas.html
@@ -1,5 +1,5 @@
-<div class="modal-notas-wrapper">
-  <div class="flex-column modal-notas-component">
+<div class="modal-wrapper">
+  <div class="flex-column modal-component">
     <div class="modal-notas-component-header">
       <h3 class="blue-font-color">Creación/edición de notas</h3>
       <div class="close-button blue-font-color" (click)="closeMenu()">X</div>
