--- a/src/components/home-page/home-page.html
+++ b/src/components/home-page/home-page.html
@@ -1,6 +1,6 @@
 <agregar-ejercicios
   class="show-component"
-  (close)="closeMenu()"
+  (close)="isExerciseComponentVisible = modalToggler.closeModal()"
   [class.isVisible]="isExerciseComponentVisible"
 ></agregar-ejercicios>
 <div class="flex-column wrapper">
@@ -154,7 +154,9 @@
       <div class="crear-rutina flex-column">
         <h2>¿No encuentras lo que buscas?</h2>
         <span>Crea tu propia rutina</span>
-        <div><button (click)="toggleExerciseComponent()">Crear</button></div>
+        <div>
+          <button (click)="isExerciseComponentVisible = modalToggler.showModal()">Crear</button>
+        </div>
       </div>
     </div>
   </section>
