--- a/src/components/secciones-principales/navbar/navbar.html
+++ b/src/components/secciones-principales/navbar/navbar.html
@@ -39,6 +39,9 @@
       <div (click)="navigation.toHistory()">
         <img src="images/navbar-icons/icons8-history-52.png" alt="" />
       </div>
+      <div (click)="navigation.toFeed()">
+        <img src="images/navbar-icons/icons8-explore-50.png" alt="explore-icon" />
+      </div>
     </div>
     <div class="logout-button" (click)="navigation.logout()">
       <img src="images/navbar-icons/icons8-log-out-64.png" alt="" />
