--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,7 @@
   --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   --medium-level-color: #ffdc30;
   --button-bg-color: #2965ff;
+  --logro-completado-color: #238a2a;
 }
 
 img {
