--- a/src/components/secciones-principales/home-page/home-page.html
+++ b/src/components/secciones-principales/home-page/home-page.html
@@ -5,7 +5,10 @@
 ></agregar-ejercicios>
 <div class="flex-column wrapper">
   <section class="bienvenida">
-    <div class="mensaje-bienvenida">Bienvenido, <span>Usuario</span></div>
+    <div class="mensaje-bienvenida">
+      {{ obtenerSaludo() }},
+      <span>Usuario</span>
+    </div>
     <div class="foto-perfil">
       <img src="/stock-profile/drose.jpg" alt="" />
     </div>
