--- a/src/components/secciones-principales/notas/notas.html
+++ b/src/components/secciones-principales/notas/notas.html
@@ -19,107 +19,14 @@
     </button>
   </div>
   <div class="notas-grid">
-    <div class="nota flex-column" (click)="expandNote = modalToggler.showModal()">
-      <div class="titulo">Progreso en press de banca</div>
-      <div class="descripcion">
-        Hoy logré hacer 3 series de 12 repeticiones con 70kg. La semana pasada solo podía con 65kg.
-        Me siento más fuerte y la técnica está mejorando
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">12 sept 2025</span>
-        <div class="icons-wrapper"></div>
-      </div>
-    </div>
-    <div class="nota flex-column">
-      <div class="titulo">Correr 10 kilómetros</div>
-      <div class="descripcion">
-        Meta para fin de año: completar una carrera de 10K en menos de 50 minutos. Plan: aumentar
-        distancia gradualmente y mejorar velocidad con intervalos.
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">12 sept 2025</span>
-        <div class="icons-wrapper"></div>
-      </div>
-    </div>
-    <div class="nota flex-column">
-      <div class="titulo">Dieta pre-entreno</div>
-      <div class="descripcion">
-        Probé comer un plátano 30 minutos antes del entrenamiento. Tuve mucha más energía durante
-        toda la sesión.
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">13 sept 2025</span>
-        <div class="icons-wrapper"></div>
-      </div>
-    </div>
-    <div class="nota flex-column">
-      <div class="titulo">Progreso en press de banca</div>
-      <div class="descripcion">
-        Hoy logré hacer 3 series de 12 repeticiones con 70kg. La semana pasada solo podía con 65kg.
-        Me siento más fuerte y la técnica está mejorando
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">12 sept 2025</span>
-        <div class="icons-wrapper"></div>
-      </div>
-    </div>
-    <div class="nota flex-column">
-      <div class="titulo">Correr 10 kilómetros</div>
-      <div class="descripcion">
-        Meta para fin de año: completar una carrera de 10K en menos de 50 minutos. Plan: aumentar
-        distancia gradualmente y mejorar velocidad con intervalos.
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">12 sept 2025</span>
-        <div class="icons-wrapper"></div>
-      </div>
-    </div>
-    <div class="nota flex-column">
-      <div class="titulo">Dieta pre-entreno</div>
-      <div class="descripcion">
-        Probé comer un plátano 30 minutos antes del entrenamiento. Tuve mucha más energía durante
-        toda la sesión.
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">13 sept 2025</span>
-        <div class="icons-wrapper"></div>
-      </div>
-    </div>
-    <div class="nota flex-column">
-      <div class="titulo">Progreso en press de banca</div>
-      <div class="descripcion">
-        Hoy logré hacer 3 series de 12 repeticiones con 70kg. La semana pasada solo podía con 65kg.
-        Me siento más fuerte y la técnica está mejorando
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">12 sept 2025</span>
-        <div class="icons-wrapper"></div>
-      </div>
-    </div>
-    <div class="nota flex-column">
-      <div class="titulo">Correr 10 kilómetros</div>
-      <div class="descripcion">
-        Meta para fin de año: completar una carrera de 10K en menos de 50 minutos. Plan: aumentar
-        distancia gradualmente y mejorar velocidad con intervalos.
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">12 sept 2025</span>
-        <div class="icons-wrapper"></div>
-      </div>
-    </div>
-    <div class="nota flex-column">
-      <div class="titulo">Dieta pre-entreno</div>
-      <div class="descripcion">
-        Probé comer un plátano 30 minutos antes del entrenamiento. Tuve mucha más energía durante
-        toda la sesión.
-      </div>
-      <div class="fecha-wrapper">
-        <span class="fecha-ultima-modificacion">13 sept 2025</span>
-        <div class="icons-wrapper">
-          <img src="/edit-delete-icons/icons8-edit-48.png" alt="" />
-          <img src="/edit-delete-icons/icons8-delete-50.png" alt="" />
-        </div>
-      </div>
-    </div>
+    <note-card (click)="expandNote = modalToggler.showModal()"></note-card>
+    <note-card></note-card>
+    <note-card></note-card>
+    <note-card></note-card>
+    <note-card></note-card>
+    <note-card></note-card>
+    <note-card></note-card>
+    <note-card></note-card>
+    <note-card></note-card>
   </div>
 </div>
