--- a/src/components/secciones-principales/logros/logros.html
+++ b/src/components/secciones-principales/logros/logros.html
@@ -1,5 +1,5 @@
 <modal-logros
-  [class.isVisible]="isAchievementsModalVisible"
+  [FullscreenOverlay]="isAchievementsModalVisible"
   (close)="isAchievementsModalVisible = modalToggler.closeModal()"
 ></modal-logros>
 <div class="flex-column wrapper">
