--- a/src/components/secciones-principales/menu-movil/menu-movil.html
+++ b/src/components/secciones-principales/menu-movil/menu-movil.html
@@ -4,8 +4,8 @@
       <div (click)="navigation.toHome(); onLinkClicked()">
         <img src="/images/navbar-icons/icons8-home-50.png" alt="home-icon" />Home
       </div>
-      <div (click)="navigation.toFeed()">
-        <img src="/images/navbar-icons/icons8-explorse-50.png" alt="explore-icon" />
+      <div (click)="navigation.toFeed(); onLinkClicked()">
+        <img src="/images/navbar-icons/icons8-explore-50.png" alt="explore-icon" /> Feed
       </div>
       <div (click)="navigation.toStats(); onLinkClicked()">
         <img src="/images/navbar-icons/icons8-statistics-60.png" alt="" />Estadísticas
