--- a/src/components/secciones-principales/metas/metas.html
+++ b/src/components/secciones-principales/metas/metas.html
@@ -1,5 +1,5 @@
 <modal-metas
-  [class.isVisible]="isGoalsModalVisible"
+  [FullscreenOverlay]="isGoalsModalVisible"
   (close)="isGoalsModalVisible = modalToggler.closeModal()"
 ></modal-metas>
 <div class="flex-column wrapper">
