--- a/src/styles.css
+++ b/src/styles.css
@@ -45,14 +45,32 @@ img {
   flex-direction: column;
 }
 
+.fullscreen-overlay {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: transform 300ms ease-in, opacity 300ms ease-in;
+  transform: scale(0);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.fullscreen-overlay.isVisible {
+  transform: scale(1);
+  opacity: 1;
+  pointer-events: auto;
+}
+
 .modal-wrapper {
   display: flex;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.3);
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
   width: 100%;
   height: 100dvh;
   z-index: 1;
@@ -66,6 +84,12 @@ img {
   z-index: 2;
   border-radius: var(--border-radius);
   gap: 1rem;
+}
+
+.pfp-image {
+  object-fit: cover;
+  height: 100%;
+  border-radius: 100%;
 }
 
 button {
